codex-rs/core/tests/suite/snapshots/all__suite__model_visible_layout__model_visible_layout_turn_overrides.snap
---
source: core/tests/suite/model_visible_layout.rs
expression: "format_labeled_requests_snapshot(\"Second turn changes cwd, approval policy, and personality while keeping model constant.\",\n&[(\"First Request (Baseline)\", &requests[0]),\n(\"Second Request (Turn Overrides)\", &requests[1]),])"
---
Scenario: Second turn changes cwd, approval policy, and personality while keeping model constant.

## First Request (Baseline)
00:message/developer:<PERMISSIONS_INSTRUCTIONS>
01:message/developer:<SKILLS_INSTRUCTIONS>
02:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
03:message/user:first turn

## Second Request (Turn Overrides)
00:message/developer:<PERMISSIONS_INSTRUCTIONS>
01:message/developer:<SKILLS_INSTRUCTIONS>
02:message/developer:<PERMISSIONS_INSTRUCTIONS>
03:message/developer:<personality_spec> The user has requested a new communication style. Future messages should adhe...
04:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
05:message/user:first turn
06:message/assistant:turn one complete
07:message/user:<ENVIRONMENT_CONTEXT:cwd=PRETURN_CONTEXT_DIFF_CWD>
08:message/user:second turn with context updates
